set(VTK_VMTK_COMMON_TARGET_LINK_LIBRARIES )

set ( VTK_VMTK_COMMON_COMPONENTS
CommonCore
)
if (VTK_WRAP_PYTHON AND VTK_VMTK_WRAP_PYTHON)
list(APPEND VTK_VMTK_COMMON_COMPONENTS
  WrappingPythonCore
  )
endif(VTK_WRAP_PYTHON AND VTK_VMTK_WRAP_PYTHON)
find_package( VTK ${VTK_VERSION_MAJOR}.${VTK_VERSION_MINOR} COMPONENTS ${VTK_VMTK_COMMON_COMPONENTS} REQUIRED )
include( ${VTK_USE_FILE} )
list( APPEND VTK_VMTK_COMMON_TARGET_LINK_LIBRARIES ${VTK_LIBRARIES} )

SET (VTK_VMTK_COMMON_SRCS
  vtkvmtkMath.cxx
  )

vmtk_build_library(
  NAME Common
  SRCS ${VTK_VMTK_COMMON_SRCS}
  TARGET_LINK_LIBRARIES ${VTK_VMTK_COMMON_TARGET_LINK_LIBRARIES}
  )
